<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/played_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silence"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:background="@color/blackGray"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:max="8"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <Button
        android:id="@+id/select_file_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/file_1"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    <Button
        android:id="@+id/select_file_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/file_2"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@+id/play_button" />

    <TextView
        android:id="@+id/file_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_file_1" />

    <TextView
        android:id="@+id/file_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/track_2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_name_1" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar"
        app:layout_constraintStart_toStartOf="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    <TextView
        android:id="@+id/cross_fade_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/cross_fade_value"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>